[package]
name = "cross_process_texture_sharing"
version = "0.0.1"
authors = [ "Mason Chang <mchang@mozilla.com>" ]

[dependencies]
# Required for glutin to show a window
glutin = "0.6.1"
gleam = "*"
libc = "*"

# For Image decoding
image = "*"

# For better libc things
nix = "0.6.0"

# For IOSurface bindings.
io-surface = "*"
